--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ambulance-ufe",
+  "type": "module",
   "version": "0.0.1",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
@@ -26,6 +27,7 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@material/web": "^1.2.0",
     "@stencil/core": "^4.7.0"
   },
   "devDependencies": {
