--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "openapi": "openapi-generator-cli generate"
+    "openapi": "openapi-generator-cli generate",
+    "test:jest": "jest --config ./jest.config.js"
   },
   "dependencies": {
     "@material/web": "^1.2.0",
